2008-11-06  Dan Winship  <danw@gnome.org>

	* libsoup/Makefile.am (libsoup_gnome_2_4_la_LIBADD): fix linking
	with --as-needed. #559342, pointed out by Götz Waschk

2008-11-04  Dan Winship  <danw@gnome.org>

	* configure.in: 2.25.1

	* NEWS: update

2008-11-04  Dan Winship  <danw@gnome.org>

	* libsoup/soup-address.c (soup_address_is_resolved):
	* libsoup/soup-cookie.c (soup_cookie_copy):
	* libsoup/soup-cookie-jar.c (soup_cookie_jar_class_init):
	* libsoup/soup-message-headers.c (SoupMessageHeadersType):
	* libsoup/soup-proxy-resolver.c
	(soup_proxy_resolver_get_proxy_async)
	(soup_proxy_resolver_get_proxy_sync):
	* libsoup/soup-status.c (soup_status_proxyify): misc doc fixes

	* libsoup/soup-cookie-jar-text.h: remove a "deprecated" API that
	was never actually released

	* libsoup/soup.h: include soup-proxy-resolver.h

	* docs/reference/Makefile.am (SCAN_OPTIONS): set
	--deprecated-guards correctly
	(IGNORE_HFILES): ignore some more internal files
	(GTKDOC_LIBS): link against libsoup-gnome, not libsoup

	* docs/reference/libsoup-2.4-docs.sgml:
	* docs/reference/libsoup-2.4.types:
	* docs/reference/libsoup-2.4-sections.txt: add new stuff

2008-11-04  Dan Winship  <danw@gnome.org>

	* libsoup/soup-cookie-jar-text.c: implementation of SoupCookieJar
	that persists to a text file in the old Mozilla cookies.txt
	format. Written by Xan Lopez and myself.

	* libsoup/soup-cookie-jar-sqlite.c: implementation of
	SoupCookieJar that persists to an sqlite database in the new
	Mozilla cookies.sqlite format. (Part of libsoup-gnome.) Written by
	Diego Escalante Urrelo, based on soup-cookie-jar-text.c.

	* libsoup/soup-cookie-jar.c: add various functionality needed by
	the two new subclasses. (Mostly written by Xan.) Does not break
	API/ABI compat with 2.24.

	* libsoup/soup-cookie.c (soup_cookie_get_type): register
	SoupCookie as a boxed type.
	(domain_matches): fix a bug here that meant "foo.com" couldn't set
	a cookie for domain=.foo.com